samples/_failures_safe/1761040030_e219ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e12f4730.c: In function ‘main’:
./samples/SAFE/__tmp_e12f4730.c:141:12: error: missing terminating " character
  141 |     printf("
      |            ^
./samples/SAFE/__tmp_e12f4730.c:141:5: error: expected expression at end of input
  141 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_e12f4730.c:141:5: error: expected declaration or statement at end of input
